# wirth-algorithms

./: .gitignore  README.md
c99/: CMakeLists.txt  test.c  test.h  util.c  util.h
c99/ch01/: CMakeLists.txt  bench_search.c  search.c  search.h  string_search.c  string_search.h  table_search.c  table_search.h  test_search.c  test_string_search.c  test_table_search.c
fortran03/: CMakeLists.txt  debug.f90  test.f90
fortran03/ch01/: CMakeLists.txt  search.f90  string_search.f90  table_search.f90  test_search.f90  test_string_search.f90  test_table_search.f90
oberon2/: Makefile  Test.m
oberon2/ch01/: .StringSearch.m.swp  Makefile  Search.m  StringSearch.m  TestSearch.m  TestStringSearch.m
